# libwdet

./: CMakeLists.txt  README.md  rebuild.sh
filter/filter_gbk/: charprob.txt  cnstopword.txt  enstopword.txt  firstchar.txt
filter/filter_utf8/: charprob.txt  stopchar.txt
src/: CMakeLists.txt  Filter.cpp  Filter.h  WordFind.cpp  WordFind.h  encrypt.cpp  opendir.cpp  opendir.h  test1.cpp  test2.cpp  wdet.cpp  wdet.h
src/utils/: CMakeLists.txt  DirScanner.cpp  DirScanner.h  StdHeader.h  SystemMacroDef.h  Utility.cpp  Utility.h
